# RemiaftServerManager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install-remote.sh  install.sh
src/: config.rs  docker.rs  docker_api.rs  encoding.rs  i18n.rs  main.rs  manifest.rs  process.rs  rcon.rs  shutdown.rs  text_encoding.rs  tui.rs
src/tui/: console_log.rs  input.rs  render.rs  startup.rs  terminal.rs
