[package]
name = "remiaft"
version = "0.1.29"
edition = "2021"
license = "MIT"
description = "Modern self-hosted Minecraft server manager for Remiaft"
repository = "https://github.com/Angelhellwolf/RemiaftServerManager"

[dependencies]
anyhow = "1"
chardetng = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
encoding_rs = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
